cleaned up code of parsing location header on response